# minirec

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  test_hpo.py  test_models_fix.py  test_run.py  verify_stats.py
configs/: evaluation.yaml
configs/datasets/: amazon-book.yaml  gowalla.yaml  ml-100k.yaml  ml-1m.yaml  steam.yaml  yahoo-r3.yaml  yelp2018.yaml
configs/models/: alpha_ease.yaml  aspire.yaml  aspire_diag.yaml  aspire_ips.yaml  aspire_pure.yaml  aspire_rowsum.yaml  bspm.yaml  causal_aspire.yaml  causal_aspire_dr.yaml  causal_aspire_dropout.yaml  co_occurrence.yaml  constrained_mcar_ease.yaml  daspire.yaml  daspire_diag.yaml  daspire_rowsum.yaml  dlae.yaml  dlae_dan.yaml  dr_jl.yaml  drlae.yaml  ease.yaml  ease_dan.yaml  energy_dlae.yaml  energy_wiener.yaml  fixed_aspire.yaml  gf_cf.yaml  hybrid_wiener.yaml  ials.yaml  ips_lae.yaml  ipsdlae.yaml  ipswiener.yaml  lae.yaml  lightgcn.yaml  lira.yaml  lr_chebyshev_cf.yaml  mf.yaml  mf_ips.yaml  mnar_lae.yaml  pmi_aspire.yaml  pmi_lae.yaml  pop_ips_wiener.yaml  (+5 more)
docs/: MODELS_AND_METRICS.md  USAGE.md
scripts/: analyze_ace_properties.py  compare_normalizations.py  detect_separator.py  run_test.py  show_stats.py  spectral_analysis.py  sweep_alpha_impact.py  verify_mnar_correction.py  verify_snr_bias.py  verify_variance_explosion.py  visualize_aspire_stats.py  visualize_mnar_analysis.py
src/: trainer.py
src/data/: loader.py  preprocess.py
src/eval/: metrics.py
src/hpo/: optimizer.py
src/models/: __init__.py  adaptive_aspire.py  alpha_ease.py  aspire.py  aspire_diag.py  aspire_ips.py  aspire_pure.py  aspire_reg.py  aspire_rowsum.py  base.py  bspm.py  causal_aspire.py  causal_aspire_dr.py  causal_aspire_dropout.py  co_occurrence.py  constrained_mcar_ease.py  dan.py  daspire.py  daspire_diag.py  daspire_rowsum.py  dlae.py  dr_jl.py  drlae.py  ease.py  energy_dlae.py  energy_wiener.py  fixed_aspire.py  gf_cf.py  hybrid_wiener.py  ials.py  ips_lae.py  ipsdlae.py  ipswiener.py  lae.py  lightgcn.py  lira.py  mf.py  (+10 more)
(+5 files in other folders)
