[project]
name = "minirec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.14"
dependencies = [
    "implicit>=0.7.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.17.1",
    "torch>=2.0.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  # 1. 리눅스/윈도우에서 CUDA 버전 우선 시도
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  # 2. CUDA 버전 탐색에 실패하거나 타 플랫폼(macOS)일 경우 기본 PyPI 사용 (명시적 비워둠)
]
